--- a/application/app/views/layouts/menu.rhtml
+++ b/application/app/views/layouts/menu.rhtml
@@ -35,9 +35,11 @@
       }
 
     </script>
-    <%= stylesheet_link_tag "mateme" %>
+    <%= stylesheet_link_tag "dashboard" %>
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
+    <%= stylesheet_link_tag "graytabs" %>
     <%= javascript_include_tag "preload" %>
+    <%= javascript_include_tag "dashboard" %>
   </head>
   <body id="container">
     <div id="content">
