--- a/application/app/views/layouts/clinic.html.erb
+++ b/application/app/views/layouts/clinic.html.erb
@@ -4,65 +4,12 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title><%= @title = "#{controller.controller_name.humanize} #{controller.action_name.humanize}" rescue ""  %></title>
-    <script language="javascript">
-      tstUsername = "<%= User.current_user.username unless User.current_user.nil? %>";
-      tstCurrentDate = "<%= Time.now.strftime("%Y/%m/%d") %>";
-      var tt_cancel_destination = null;
-    </script>
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= stylesheet_link_tag "dashboard" %>
-    <%= javascript_include_tag "barcode" %>
-    <%= javascript_include_tag "jquery" %>
-    <%= javascript_include_tag "utils" %>
-    <script src="/javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      jQuery(document).ready(function($) {
-        $('#logout').click(function() { window.location = '/logout' })
-        $('#find').click(function() { window.location = '/people/search' })
-        $('#find_by_id').click(function() { window.location = '/people/find_by_national_id' })
-        //if ($('#staging')) $('#staging').click(function() { window.location = 'http://staging/clinic' })
-        $('#new_desk').click(function() { window.location = '/location' })
-        $('#set_date').click(function() { window.location = '/people/set_datetime' })
-
-        session_datetime = '<%=session[:datetime].to_date rescue '' %>'
-
-        if (session_datetime != ''){
-          document.getElementById('set_date').innerHTML = '<span>Reset date</span>'
-          $('#set_date').click(function() { window.location = '/people/reset_datetime' })
-        } /*else {
-    document.getElementById('set_date').innerHTML = '<span>Set date</span>'
-    $('#set_date').click(function() { window.location = '/people/set_datetime' })
-    }*/
-      })
-    </script>
-
+    <%= stylesheet_link_tag "graytabs" %>
+    <%= javascript_include_tag "dashboard" %>
   </head>
   <body id="container">
-    <div id="content">
-      <div id="header">
-        <div id="facility-name"><%= Location.current_location.name %></div>
-        <div id="app-version"><%= version %></div>
-        <div id="user">Logged in as <%= User.current_user.username %></div>
-        <form id='barcodeForm' action="/people/search">
-          <div id="barcode-label">Scan Patient Barcode:
-            <%= text_field_tag :identifier, '', {:id => 'barcode'} %>
-          </div>
-          <%= submit_tag "Submit", :style => "display:none" %>
-        </form>
-      </div>
       <%= yield %>
-      <div id="footer" class="dark">
-        <div id="buttons" class="buttons" style="top:0px">
-          <button id="logout" class="red left"><span>Logout</span></button>
-          <button id="find" class="green" style="width:180px;"><span>Find by Name</span></button>
-          <button id="find_by_id" class="green" style="width:230px;"><span>Find by National Id</span></button>
-          <!--button id="staging" class="yellow"><span>Staging</span></button-->
-          <% if development_environment? %>
-            <button id="new_desk" class="blue" style="width:150px;"><span>Swap desk</span></button>
-          <% end %>
-          <!--button id="set_date" class=""><span>Set date</span></button-->
-        </div>
-      </div>
-    </div>
   </body>
 </html>
