--- a/application/app/views/layouts/dashboard.html.erb
+++ b/application/app/views/layouts/dashboard.html.erb
@@ -11,6 +11,7 @@
     </script>
     <%= stylesheet_link_tag fancy_or_high_contrast_touch %>
     <%= stylesheet_link_tag "dashboard" %>
+    <%= stylesheet_link_tag "dashboard" %>
     <%= javascript_include_tag "jquery" %>
     <%= javascript_include_tag "utils" %>
 
