changed the location and version labels

--- a/application/app/views/clinic/users.html.erb
+++ b/application/app/views/clinic/users.html.erb
@@ -13,13 +13,13 @@
 </script>
 <div id="home">
   <div id="project_name"><span style="font-size: 0.4em;">Hotline</span></div>
-  <div id="facility"><%=@facility -%></div>
-  <div id="location">Hotline</div>
-  <div id="date"></div>
+  <div id="facility"><%=Location.current_location.name%></div>
+  <div id="location"><%=version_without_date%></div>
+  <div id="date"><%=system_date%></div>
 
   <div id="user"><%= User.current_user.username %></div>
   <select id="tabs">
-    <option value="/clinic/showuserfunctions"> Clinic Schedules</option>
+    <option value="/clinic/showuserfunctions"> User Administration </option>
   </select>
   <select id="links">
     <option value="">Cancel</option>
