--- a/application/app/views/patients/visit_summary.rhtml
+++ b/application/app/views/patients/visit_summary.rhtml
@@ -1,3 +1,12 @@
+<style type="text/css">
+  .visit-summary-header{
+    text-align: left;
+    font-size:  1em;
+    color:      #FFFFFF;
+    background: #808080;
+  }
+</style>
+
 <base target="_parent">
     <div id="visit-summary" style=" width: 628px;">
         <h3> Call Summary</h3>
