--- a/application/public/stylesheets/dashboard.css
+++ b/application/public/stylesheets/dashboard.css
@@ -26,6 +26,13 @@ body{
   background-color:#000000;
 }
 
+.visit-summary-header{
+  text-align: left;
+  font-size:  1em;
+  color:      #FFFFFF;
+  background: #808080;
+}
+
 
 #content {
   background:#FFFFFF;
