Made changes with navigation, to be in line with the prototype, also added extra views - homemain,emergencycall,irrelevantcall

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -1,5 +1,5 @@
 <script language="javascript">
-  tt_cancel_destination = "/logout";
+  tt_cancel_destination = "/clinic/irrelevantcall";
   tt_cancel_show = "/people/search";
 </script>
 
@@ -19,10 +19,10 @@
   </select>
 
   <select id="links">
-    <option value="">Logout</option>
+    <option value="">Irrelevant Call</option>
     <option value="" ttSize="190px">Find by Name</option>
     <option value="/people/find_by_national_id" ttSize="190px">Find by ID</option>
-    <option value="" ttSize="190px">Irrelevant Call</option>
+    <option value="/clinic/emergencycall" ttSize="190px">Emergency Call</option>
   </select>
 </div>
 
