--- a/application/app/views/people/new.rhtml
+++ b/application/app/views/people/new.rhtml
@@ -20,7 +20,7 @@
   <% if params[:relation] %>
   var tt_cancel_destination = "/patients/relationships?patient_id=<%=h params[:relation] -%>"
   <% else %>
-  var tt_cancel_destination = "/clinic"
+  var tt_cancel_destination = "/clinic/call"
   <% end %>
 
   var skipped = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
