--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -19,7 +19,7 @@
   </select>
 
   <select id="links">
-    <option value="">Irrelevant Call</option>
+    <option value="" ttSize="190px">Irrelevant Call</option>
     <option value="" ttSize="190px">Find by Name</option>
     <option value="/people/find_by_national_id" ttSize="190px">Find by ID</option>
     <option value="/clinic/emergencycall" ttSize="190px">Emergency Call</option>
