--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -1,6 +1,6 @@
 <script language="javascript">
   tt_cancel_destination = "/logout";
-  tt_cancel_show = "/clinic/call";
+  tt_cancel_show = "/clinic/call?task=new";
 </script>
 
 <div id="home">
@@ -20,7 +20,6 @@
 
   <select id="links">
     <option value="">Logout</option>
-    <option value="/clinic/call" ttSize="190px">Start Call</option>
+    <option value="/clinic/call?task=new" ttSize="190px">Start Call</option>
   </select>
 </div>
-
