made the visit_summary div scrollable

--- a/application/app/views/patients/visit_summary.rhtml
+++ b/application/app/views/patients/visit_summary.rhtml
@@ -11,7 +11,7 @@
 </style>
 
 <base target="_parent">
-    <div id="visit-summary" style=" width: 628px;">
+    <div id="visit-summary" style=" width: 680px; height: 320px; overflow: auto;">
         <h3> Call Summary</h3>
         <table width="90%">
           <%@encounter_names.each{|encounter_name|
