added logic to return date in years and months for age equal to or less than 2. I also changed the medication tab to read Symptoms History

--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -10,7 +10,12 @@
 
   <div id="patient_name"><%= @patient.person.name -%></div>
   <div id="patient_gender"><%=@patient.person.formatted_gender -%></div>
-  <div id="patient_age"><%= @patient.person.age rescue '' -%></div>
+  <%  if @patient.person.age <= 2 %>
+      <div id="patient_age"><%= @patient.person.age_in_years_months rescue '' -%></div>
+  <%  else %>
+      <div id="patient_age"><%= @patient.person.age rescue '' -%></div>
+  <%  end %>
+  
   <div id="patient_id"><%= @patient.national_id_with_dashes rescue '' -%></div>
  
   <div id="patient_card">
@@ -33,7 +38,7 @@
 
   <select id="tabs">
     <option value="/patients/visit_summary?patient_id=<%=@patient.id%>">Overview</option>
-    <option value="">Medication</option>
+    <option value="">Symptoms History</option>
   </select>
 
   <select id="links">
